# contextclipper

./: .gitignore  .mcp.json  .windsurfrules  CHANGELOG.md  GOVERNANCE.md  LICENSE  README.md  REVIEW-PROPMT.md  ROADMAP.md  SECURITY.md  SUMMARY.md  UPGRADE-PLAN.md  UPGRADE-PROMPT.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_runner.py  run_benchmarks.sh
benchmarks/traces/: docker_ps.json  git_diff.json  npm_install_failure.json  pytest_failure.json
contrib/aider-ctxclp/: README.md  aider_ctxclp.py
contrib/claude-code-ctxclp/: README.md  claude_code_ctxclp.py
contrib/cursor-ctxclp/: README.md  cursor_fetch_tool.json  cursor_tool.json
docs/: SPEC.md  agent-integration.md  architecture.md  contributing.md  filter-authoring.md  graph-querying.md
rfcs/: 000-template.md  001-streaming-engine.md
src/contextclipper/: __init__.py  __main__.py  _detect.py
src/contextclipper/cli/: __init__.py  install.py  main.py
src/contextclipper/core/: __init__.py  config.py  exceptions.py  redact.py  stats.py  tee.py  types.py
src/contextclipper/engine/: __init__.py  filters.py  graph.py  logging.py  project_config.py  redact.py  scbm.py  stats.py  strategies.py  streaming.py  tee.py
src/contextclipper/filters/cargo/: cargo.toml
src/contextclipper/filters/docker/: docker.toml
src/contextclipper/filters/git/: git.toml
src/contextclipper/filters/go/: go.toml
src/contextclipper/filters/kubectl/: kubectl.toml
src/contextclipper/filters/make/: make.toml
src/contextclipper/filters/mypy/: mypy.toml
src/contextclipper/filters/node/: node.toml
src/contextclipper/filters/php/: artisan.toml  composer.toml  phpunit.toml
src/contextclipper/filters/python/: python.toml
src/contextclipper/filters/terraform/: terraform.toml
src/contextclipper/filters/typescript/: typescript.toml
src/contextclipper/graph/: __init__.py
src/contextclipper/hooks/: claude_code_pretooluse.sh  cursor_pretooluse.sh
src/contextclipper/mcp/: __init__.py  server.py  tools.py
src/contextclipper/mcp/middleware/: __init__.py
src/contextclipper/mcp/resources/: __init__.py
src/contextclipper/mcp/tools/: __init__.py
src/contextclipper/shell/: __init__.py  engine.py  scbm.py  strategies.py  streaming.py
src/contextclipper/shell/filters/docker/: docker.toml
src/contextclipper/shell/filters/node/: node.toml
tests/: test_benchmarks.py  test_features.py  test_filters.py  test_graph.py  test_integration.py  test_path_safety.py  test_project_config.py  test_redact.py  test_scbm.py  test_security.py  test_stats.py  test_strategies.py  test_streaming.py  test_tee.py  test_telemetry.py
(+3 files in other folders)
