[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextclipper"
version = "0.2.0"
description = "Universal token optimizer for AI coding agents — transparent shell compression + code-graph index"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "toml>=0.10.2",
    "psutil>=6.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
ctxclp = "contextclipper.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contextclipper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
